# FileSystem_Agent

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
src/fs_agent/: __main__.py  agent.py  cli.py  config.py  engines.py  ui.py
src/fs_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fs_agent/services/: calculator.py  filesystem.py
tests/: test_services.py
